--- a/basics/templates/basics/groups.html
+++ b/basics/templates/basics/groups.html
@@ -2,6 +2,7 @@
 {% block content %}
 		<div class="container">
             <table class = "table table-hover">
+            	<h1>Your Groups</h1>
                 <thead>
                     <tr>
                         <th>Groupname</th>
