--- a/basics/static/basics/css/styles.css
+++ b/basics/static/basics/css/styles.css
@@ -152,6 +152,9 @@ button, .btn-primary, .btn-primary:focus {
 	opacity: 0;
 }
 
+.small-text{
+	font-size: 0.7em;
+}
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 1px) {
 		.button-container {
