--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -60,7 +60,7 @@
     </div>
 </div>
 
-<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAmqqg6nhFweM6hPaowtRZT0kRsHPZSaBA"></script>
 <script>
 
     var map;
