--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -2,9 +2,8 @@
 {% load filter %}
 {% block content %}
 
-
 <!-- needs -->
-<div id="standard-modal">
+<div id="standard-modal" style="margin-bottom: 90px">
     <div class="modal-content">
         <div class="modal-header">
             <div class="row">
@@ -84,109 +83,41 @@
     </div>
 </div><!-- end needs -->
 
-<!--
-<div class="row">
-
-  <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
-  <!--<div class="btn-group">
-    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Action <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li role="separator" class="divider"></li>
-      <li><a href="#">Separated link</a></li>
-    </ul>
-
-  </div>
-  -->
-  <!--  <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Range <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">5 km</a></li>
-        <li><a href="#">10 km</a></li>
-        <li><a href="#">20 km</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">100 km</a></li>
-      </ul>
+<div class="col-sm-1 col-sm-push-11 col-xs-3 col-xs-push-9">
+    <div id="add-float-button" style="float: right; margin-right: 50px;">
+        <a id="standard-grey-button-light" type="button" class="btn btn-default button-float" onclick="location.href='{% url 'basics:information_new' %}'" title="create new information or question" style="font-size: 26px;"><span class="glyphicon glyphicon-plus"/></a>
     </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Category <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Water</a></li>
-        <li><a href="#">Energy</a></li>
-        <li><a href="#">Pokemon</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Separated link</a></li>
-      </ul>
-    </div>
-    <div class="btn-group pull-right">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Cards per Page <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">10</a></li>
-        <li><a href="#">25</a></li>
-        <li><a href="#">50</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">All</a></li>
-      </ul>
-    </div>
-  </div>
 </div>
-<br>
-<div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
 
-     <ul class="event-list">
-       {% for info in infos%}
-       <li>
-          <time>
-             <div>{{ info.date }}</div>
-           </time>
-         <div class="info">
-           <h2 class="title"><a  href="{% url 'basics:information_view' pk=info.pk %}">{{ info.headline }}</a></h2>
-           <p class="desc">{{ info.text }}</p>
-          <ul>
-             <li style="width:33%;">comments (3)</li>
-             <li style="width:34%;"><a href="{% url 'basics:information_view' pk=info.pk %}">write comment</a><span class="fa fa-question"></span></li>
-             <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
-             <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-             {% if not user.userdata in info.reported_by.all %}
-                <li style="width:20%;"><a id="report-need" href="{% url 'basics:report_information' pk=info.pk %}">report</a></li>
-                {% endif %}
-           </ul>
-         </div>
+<script>
 
-       </li>
-       {% endfor %}
-     </ul>
-   </div>
- </div>
- <div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
-     <nav>
-       <ul class="pagination">
-         <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-         <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-         <li><a href="#">2</a></li>
-         <li><a href="#">3</a></li>
-         <li><a href="#">4</a></li>
-         <li><a href="#">5</a></li>
-         <li>
-           <a href="#" aria-label="Next">
-             <span aria-hidden="true">&raquo;</span>
-           </a>
-         </li>
-       </ul>
-     </nav>
-   </div>
- </div>
--->
+    $(window).ready(function() {
+        if($('.button-float').offset().top + 70 >= $('#footer').offset().top - 20){
+            $('.button-float').css('position', 'absolute');
+            $('.button-float').css('bottom', '0px');
+        }
+    });
+
+    $(window).resize(function() {
+        if($(document).scrollTop() + window.innerHeight < $('#footer').offset().top){
+            $('.button-float').css('position', 'fixed');
+            $('.button-float').css('bottom', '20px');
+        }else{
+            $('.button-float').css('position', 'absolute');
+            $('.button-float').css('bottom', '0px');
+        }
+    });
+
+     $(document).scroll(function() {
+         if($('.button-float').offset().top + 70 >= $('#footer').offset().top - 20){
+             $('.button-float').css('position', 'absolute');
+             $('.button-float').css('bottom', '0px');
+         }
+         if($(document).scrollTop() + window.innerHeight < $('#footer').offset().top){
+             $('.button-float').css('position', 'fixed');
+             $('.button-float').css('bottom', '20px');
+         }
+     });
+
+</script>
 {% endblock %}
