--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -2,9 +2,8 @@
 {% load filter%}
 {% block content %}
 
-
 <!-- needs -->
-<div id="standard-modal">
+<div id="standard-modal" style="margin-bottom: 90px;">
     <div class="modal-content">
         <div class="modal-header">
             <div class="row">
@@ -108,118 +107,42 @@
     </div>
 </div><!-- end needs -->
 
-<!-- Introduction Row -->
-<!--
-<div class="row">
-
-  <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
-  <!--<div class="btn-group">
-    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Action <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">Action</a></li>
-      <li><a href="#">Another action</a></li>
-      <li><a href="#">Something else here</a></li>
-      <li role="separator" class="divider"></li>
-      <li><a href="#">Separated link</a></li>
-    </ul>
-
-  </div>
-  -->
-  <!--  <form action="{% url 'basics:needs_all'%}" method="post">
-      {%csrf_token%}
-      <div class="btn-group">
-        <select name="range" class="selectpicker" title="{{range}}">
-          <option>5km</option>
-          <option>20km</option>
-          <option>40km</option>
-        </select>
-        <select name="category" class="selectpicker" title="{{category}}">
-          {%for c in categorie%}
-          <option>{{c.name}}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="btn-group pull-right">
-         <button type="submit" class="btn btn-success">Refresh</button>
-      </div>
-      <div class="btn-group pull-right">
-        <div class="btn-group">
-          <select name="cards_per_page" title="{{cards_per_page}}" class="selectpicker">
-            <option>1</option>
-            <option>5</option>
-            <option>10</option>
-          </select>
-        </div>
-
-      </div>
-    </form>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-  <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
-    <script>
-      $('.selectpicker').selectpicker({
-        style: 'btn-info',
-        size: 4
-      });
-    </script>
-  </div>
+<div class="col-sm-1 col-sm-push-11 col-xs-3 col-xs-push-9">
+    <div id="add-float-button" style="float: right; margin-right: 50px;">
+        <a id="standard-grey-button-light" type="button" class="btn btn-default button-float" onclick="location.href='{% url 'basics:needs_new' %}'" title="create new need" style="font-size: 26px;"><span class="glyphicon glyphicon-plus"/></a>
+    </div>
 </div>
-<br>
-<div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
 
-     <ul class="event-list">
-       {% for need in needs%}
+<script>
 
-         <li>
+    $(window).ready(function() {
+        if($('.button-float').offset().top + 70 >= $('#footer').offset().top - 20){
+            $('.button-float').css('position', 'absolute');
+            $('.button-float').css('bottom', '0px');
+        }
+    });
 
-            <time datetime="2014-07-20 2000">
-  						 <span class="day">{{ need.date.day }}</span>
-  						 <span class="month">{{need.date.month}}</span>
-  						 <span class="year">2014</span>
-  						 <span class="time">04:20 PM</span>
-  					 </time>
+    $(window).resize(function() {
+        if($(document).scrollTop() + window.innerHeight < $('#footer').offset().top){
+            $('.button-float').css('position', 'fixed');
+            $('.button-float').css('bottom', '20px');
+        }else{
+            $('.button-float').css('position', 'absolute');
+            $('.button-float').css('bottom', '0px');
+        }
+    });
 
-           <div class="info">
-             <h2 class="title"><a  href="{% url 'basics:needs_view' pk=need.pk %}">{{ need.headline }}</a></h2>
-             <p class="desc">{{ need.text }}</p>
-            <ul>
-               <li style="width:20%;">comments (3)</li>
-               <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-               <li style="width:20%;"><a id="help-link" href="{% url 'basics:needs_help' id=need.id %}">Help</a><span class="fa fa-question"></span></li>
-               {% if not user.userdata in need.reported_by.all %}
-                <li style="width:20%;"><a id="report-need" href="{% url 'basics:report_need' pk=need.pk %}">report</a></li>
-                {% endif %}
-             </ul>
-           </div>
+     $(document).scroll(function() {
+         if($('.button-float').offset().top + 70 >= $('#footer').offset().top - 20){
+             $('.button-float').css('position', 'absolute');
+             $('.button-float').css('bottom', '0px');
+         }
+         if($(document).scrollTop() + window.innerHeight < $('#footer').offset().top){
+             $('.button-float').css('position', 'fixed');
+             $('.button-float').css('bottom', '20px');
+         }
+     });
 
-         </li>
+</script>
 
-       {% endfor %}
-     </ul>
-   </div>
- </div>
- <div class="row">
-   <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
-     <nav>
-       <ul class="pagination">
-         <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-         <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-         <li><a href="#">2</a></li>
-         <li><a href="#">3</a></li>
-         <li><a href="#">4</a></li>
-         <li><a href="#">5</a></li>
-         <li>
-           <a href="#" aria-label="Next">
-             <span aria-hidden="true">&raquo;</span>
-           </a>
-         </li>
-       </ul>
-     </nav>
-   </div>
- </div>-->
 {% endblock %}
