--- a/basics/templates/basics/group_edit.html
+++ b/basics/templates/basics/group_edit.html
@@ -5,7 +5,7 @@
 	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h1 class="text-center">Edit Your Profile</h1>
+				<h1 class="text-center">Edit Your Group</h1>
 			</div>
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
@@ -26,6 +26,21 @@
 							<input type="description" class="form-control input-lg" placeholder= {{ group.phone }} name="phone"  >
 						{% endif %}
 					</div>
+
+					<div class="form-group">
+						{% if group.webpage == "" %}
+							<input type="description" class="form-control input-lg" placeholder=webpage name="page"  >
+						{% else %}
+							<input type="description" class="form-control input-lg" placeholder= {{ group.webpage }} name="page"  >
+						{% endif %}
+					</div>
+
+					<div class="form-group">
+							<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea>
+
+					</div>
+
+
 
 					<div class="form-group">
 						
