--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -65,6 +65,11 @@
                     <div class="form-group">
                         <input type="email" class="form-control input-lg" placeholder="Email from Group-User" name="email" required/>
                     </div>
+                    <div class="form-group" >
+                        <label>
+                            <input type="checkbox" data-toggle="switch" value="True" name="is_GO"> Governmental Organization
+                        </label>
+                    </div>
                     <div class="form-group">
                         <input name="create_group" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
                     </div>
