beim erstellen von needs, information und comments kann der user als user oder als gruppe posten, kommentare werden von oben nach unten sortiert

--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -51,7 +51,7 @@
                                 </div>
 
                                 <div class="col-sm-9">
-                                    <h6 style="color: #555; hover.color: #555;"><br>from: {{ info.date }} / number of reports: {{ info.number_reports }}</h6>
+                                    <h6 style="color: #555; hover.color: #555;"><br>from: {{ info.date }} / number of reports: {{ info.number_reports }} / group: {{ info.group }}</h6>
                                 </div>
                             </a>
                             <div class="col-sm-1">
