--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -23,6 +23,15 @@
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
 					</div>
+					{% if user.groups.all|length != 0 %}
+						<p style="font-size:160%;"> post as </p>
+						<select class="form-control" name="group">
+							<option value="no_group">User</option>
+							{% for group in user.groups.all %}
+								<option value="{{group.id}}">{{group.name}}</option>
+							{% endfor %}
+						</select>
+					{% endif %}
 					<div class="form-group">
              				<p id="choose-location-text">If you do not like to use your standard location choose an other one.
       					{% include "basics/map_testing.html" %}</p>
